--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Observable Collections</string>
+    <string name="remove">remove</string>
+    <string name="set">set</string>
+    <string name="add">add</string>
 </resources>
